fix: MobileNav stack level
- Fix MobileNav stack level so that it doesn't overlap with the Cart component

--- a/src/app/components/sections/navigation/MobileNavigation/MobileNav/MobileNav.module.css
+++ b/src/app/components/sections/navigation/MobileNavigation/MobileNav/MobileNav.module.css
@@ -5,7 +5,7 @@ CSS Module for MobileNav component
 /*mobile navigation pop up main container*/
 .popUpCont {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 0;
   background-color: var(--lightbox-bg);
